# renderer

./: .$BillboardCloud.drawio.dtmp  .gitignore  BillboardCloud.drawio  Raytracing.drawio  core.html  core.html.md  index.html  index.html.md  robots.txt  search.json  settings.ini  sitemap.xml
ExternalResources/glew/include/GL/: glew.h
ExternalResources/glm/glm/detail/: type_half.inl
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
renderer/: _modidx.py  core.py
source/: .gitignore  Annotation.ixx  Application.cpp  Application.h  Billboard.ixx  BillboardCloud.cpp  BillboardCloud.h  BillboardCloud.sln  BillboardRenderer.cpp  BillboardRenderer.h  CMAKE.txt  CMakeLists.txt  CPP-Projects.sln  CPP-Projects.vcxproj  CPP-Projects.vcxproj.filters  Camera.cpp  Camera.h  Camera.ixx  CombinedInterface.ixx  Example.ixx  Face.cpp  Face.h  Face.ixx  GameInterface.cpp  GameInterface.h  GameInterface.ixx  GameObject.cpp  GameObject.h  GameObject.ixx  IComponent.cpp  IComponent.h  IComponent.ixx  IGameObject.cpp  IGameObject.h  IGameObject.ixx  IMaterial.cpp  IMaterial.h  IMaterial.ixx  IMesh.cpp  IMesh.h  (+50 more)
source/2DGame/: Game.cpp  Game.h  Game.ixx  GameRenderer.cpp  GameRenderer.h  GameRenderer.ixx
source/MeshSimplification/: Billboard.cpp  Billboard.h  Billboard.ixx  BillboardCloud.cpp  BillboardCloud.h  BillboardCloud.ixx  BillboardGenerator.cpp  BillboardGenerator.h  BillboardGenerator.ixx  BillboardRenderer.cpp  BillboardRenderer.h  BillboardRenderer.ixx  BillboardTexture.ixx  BoundingBox.ixx  IBillboardGenerator.h  IBillboardGenerator.ixx  IPlaneSelector.h  IPlaneSelector.ixx  Plane.cpp  Plane.h  PlaneSelector.cpp  PlaneSelector.h  PlaneSelector.ixx  PlaneSpace.ixx
source/Raytracer/: Raytracer.cpp  Raytracer.h  Raytracer.ixx  RaytracerRenderer.cpp  RaytracerRenderer.h  RaytracerRenderer.ixx
source/SkinnedAnimation/: Application.cpp  Application.h  Application.ixx  Joint.cpp  Joint.h  Joint.ixx  Mesh.ixx  Renderer.cpp  Renderer.h  Renderer.ixx  Skeleton.cpp  Skeleton.h  Skeleton.ixx  SkinMesh.cpp  SkinMesh.h  SkinMesh.ixx
source/input/: Transformationen.xml
source/input/Cinema4D/: Scene.mtl
source/input/Geometrie/: LowerJaw_IB.raw  LowerJaw_VB.raw  LtEyeBall_smtt_IB.raw  LtEyeBall_smtt_VB.raw  LtEyeTransp_smtt_IB.raw  LtEyeTransp_smtt_VB.raw  MarsienneSkin_IB.raw  RtEyeBall_smtt_VB.raw  RtEyeTransp_smtt_VB.raw  UpperJaw_IB.raw  UpperJaw_VB.raw
source/input/Texturen/: noise.dds
source/input/Trees/Laubwerk/: Tree.mtl
source/input/Trees/MultipleTrees/: trees9.mtl
source/input/Trees/SingleTree/: Tree.mtl
source/input/segmentation/: coco_output.json
source/shaders/: FBasic.glsl  FColor.glsl  FEye.glsl  FEyeTransp.glsl  FFullScreenQuad.glsl  FGizmo.glsl  FJoint.glsl  FTeeth.glsl  VBasic.glsl  VCollectible.glsl  VColor.glsl  VEye.glsl  VEyeTransp.glsl  VGizmo.glsl  VJoint.glsl  VPlayer.glsl  VTeeth.glsl  diffuse_directional_light.fs.glsl  forward.vs.glsl  normals.fs.glsl  pbr_directional_light.fs.glsl
source/src/: BillboardCloud.cpp  BillboardCloud.h  BillboardRenderer.cpp  BillboardRenderer.h
source/tests/: test_raytracer.cpp
